# pytubetk

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
examples/: data_download.sh
examples/data/: .gitignore
examples/head_mra/: .gitignore  segment_vessels_brain_mra_demo.ipynb  strip_skull_mra_demo.ipynb
examples/visualize/: .gitignore  ConvertTubesToImage.ipynb  ConvertTubesToPolyData.ipynb
src/: TubeViewer.py  __init__.py  segment_vessels_brain_mra.py  strip_skull.py  tube_utils.py  tube_viewer.py  tube_visualization_utils.py
